protected/sevices/remote/bin/etc/sysconfig/iptables
# Generated by iptables-save v1.3.5 on Sat Oct 24 10:50:10 2009
*nat
:PREROUTING ACCEPT [186718:21358275]
:POSTROUTING ACCEPT [20335:1491315]
:OUTPUT ACCEPT [20427:1496835]
:out - [0:0]
:relay - [0:0]
-A POSTROUTING -j out 
-A out -p tcp -m tcp --dport 25 -j SNAT --to-source 88.255.116.39 
-A out -s 192.168.0.0/255.255.0.0 -j SNAT --to-source 88.255.116.40 
-A relay -j SNAT --to-source 192.168.101.29 
COMMIT
# Completed on Sat Oct 24 10:50:10 2009
# Generated by iptables-save v1.3.5 on Sat Oct 24 10:50:10 2009
*mangle
:PREROUTING ACCEPT [2181464:545611304]
:INPUT ACCEPT [1129848:213440751]
:FORWARD ACCEPT [980099:321254686]
:OUTPUT ACCEPT [888454:311240833]
:POSTROUTING ACCEPT [1868599:632502165]
-A PREROUTING -d 98.137.0.0/255.255.0.0 -j MARK --set-mark 0x2 
-A PREROUTING -d 206.190.0.0/255.255.0.0 -j MARK --set-mark 0x2 
-A PREROUTING -d 216.39.0.0/255.255.0.0 -j MARK --set-mark 0x2 
-A PREROUTING -d 209.191.0.0/255.255.0.0 -j MARK --set-mark 0x2 
-A PREROUTING -d 68.142.0.0/255.255.0.0 -j MARK --set-mark 0x2 
-A PREROUTING -d 66.196.0.0/255.255.0.0 -j MARK --set-mark 0x2 
-A PREROUTING -p tcp -m tcp --dport 25 -j MARK --set-mark 0x2 
COMMIT
# Completed on Sat Oct 24 10:50:10 2009
